<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:padding="20dp"
  >
    <TableLayout android:id="@+id/tableLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content"  android:layout_gravity="center" android:stretchColumns="1">
        <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
             <TextView android:text="@string/currency_label"  android:gravity="right" android:textStyle="bold" android:paddingRight="10dp" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:id="@+id/textView1" android:layout_height="wrap_content"></TextView>
             <TextView android:text="TextView" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:id="@+id/rate_rate_label" android:layout_height="wrap_content"></TextView>
        </TableRow>
        <TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
             <TextView android:text="@string/rate_label"  android:gravity="right" android:textStyle="bold"  android:paddingRight="10dp"  android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:id="@+id/textView3" android:layout_height="wrap_content"></TextView>
             <EditText android:inputType="numberDecimal" android:editable="true" android:id="@+id/rate_rate_input" android:layout_height="wrap_content" android:layout_width="fill_parent">
                 <requestFocus></requestFocus>
             </EditText>
        </TableRow>
        <TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content">
             <TextView android:text="@string/date_label"  android:gravity="right" android:textStyle="bold"  android:paddingRight="10dp"  android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:id="@+id/textView4" android:layout_height="wrap_content"></TextView>
             <TextView android:text="TextView" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:id="@+id/rate_date_label" android:layout_height="wrap_content"></TextView>
        </TableRow>
    </TableLayout>
    
    <LinearLayout android:paddingTop="10dp"  android:layout_width="fill_parent" android:id="@+id/linearLayout1" android:layout_height="wrap_content">
        <Button android:text="@string/apply_label" android:id="@+id/rate_yes_label" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content"></Button>
        <Button android:text="@string/cancel_label" android:id="@+id/rate_no_label" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content"></Button>
    </LinearLayout>
    
    
</LinearLayout>
