<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:padding="5px">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="5px"
        android:textStyle="bold"
        android:text="@string/welcome_string"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="5px"
        android:text="@string/rate_enquiry_method"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="5px"
        android:src="@drawable/ezbanner" />

    
 <LinearLayout android:paddingTop="10dp" android:padding="10px"  android:layout_width="fill_parent" android:id="@+id/linearLayout1" android:layout_height="wrap_content">
   
<Button
        android:id="@+id/internetEntry"
        android:layout_width="0dp" android:layout_weight="1" 
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/yellowbutton"
        android:padding="10px"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:text="@string/internet_channel" />
    <Button
        android:id="@+id/manualEntry"
        android:layout_width="0dp" android:layout_weight="1" 
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/yellowbutton"
        android:padding="10px"
            android:layout_marginLeft="5dp"
        android:textStyle="bold"
        android:text="@string/manual_channel" />
        </LinearLayout>

</LinearLayout>