<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_gravity="center_horizontal|center_vertical"
  android:id="@+id/cartDialog1"
  android:padding="10dp"
  >
  
    <TableLayout android:id="@+id/tableLayout1" android:layout_width="wrap_content"  android:padding="5dp" android:layout_height="wrap_content" android:layout_gravity="center">
        <TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:paddingRight="10dp"  android:gravity="right" android:textStyle="bold"  android:id="@+id/fcTitle" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:text="EUR total:" android:layout_width="wrap_content" android:layout_gravity="right"></TextView>
            <TextView android:id="@+id/cart_foreign_total" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:text="100.00 EUR"  android:layout_width="wrap_content"></TextView>
        </TableRow>
        <TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:paddingRight="10dp"  android:gravity="right" android:textStyle="bold"  android:id="@+id/lcTitle" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:text="CZK total:" android:layout_width="wrap_content"></TextView>
            <TextView android:id="@+id/cart_local_total" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:text="2,100,500.00 CZK"  android:layout_width="wrap_content"></TextView>
        </TableRow>
    </TableLayout>
    
    <Button android:layout_weight="1" android:text="@string/subtract_label" android:id="@+id/cart_subtract_button"   android:layout_gravity="center_vertical|center_horizontal|center" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
    <Button android:layout_weight="1"  android:text="@string/delete_whole_cart_button" android:id="@+id/cart_reset" android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>
    <Button android:text="@string/ok_label" android:id="@+id/cart_cancel_button" android:layout_height="wrap_content" android:layout_width="fill_parent"></Button>
    
</LinearLayout>